# near-ledger-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
examples/: get_public_key_ble.rs  get_version.rs  get_version_ble.rs  get_wallet_id.rs  sign_nep_366_delegate_action.rs  sign_nep_366_delegate_action_batch_all_sub_actions_v1.rs  sign_nep_366_delegate_action_simple.rs  sign_nep_413_message.rs
examples/common/: lib.rs
examples/get_public_key/: display.rs  silent.rs
examples/sign_nep_366/: delegate_action_batch_all_sub_actions_v1.rs  delegate_action_batch_all_sub_actions_v2.rs  delegate_action_simple.rs
examples/sign_transaction/: add_key_fullaccess.rs  add_key_functioncall.rs  batch_all_actions.rs  batch_all_actions_v1.rs  batch_all_actions_v2.rs  create_account.rs  delete_account_long.rs  delete_account_short.rs  delete_key_ed25519.rs  delete_key_secp256k1.rs  deploy_contract.rs  deploy_contract_as_global_account_id.rs  deploy_contract_as_global_hash.rs  functioncall_bin.rs  functioncall_str.rs  functioncall_str_ascii_subrange.rs  functioncall_str_newline.rs  functioncall_utf8.rs  sign_deploy_contract_use_global_account_id.rs  sign_deploy_contract_use_global_hash.rs  stake.rs
src/: ble.rs  ble_api.rs  lib.rs  print_apdus.rs
